--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
   <link async href="css/style.css" rel="stylesheet">
-  <link async href="css/print.css" rel="stylesheet">
+  <link async href="css/print.css" media="print" rel="stylesheet">
 
   <script>
     (function(w, g) {
