async google fonts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 
   <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link async href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 
   <link async href="css/style.css" rel="stylesheet">
   <link async href="css/print.css" media="print" rel="stylesheet">
