--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
   </style>
 
   <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-  <link async href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <!-- <link async href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
-  <link async href="css/style.css" rel="stylesheet">
+  <script async src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ['Open Sans']
+      }
+    });
+  </script>
+
+  <!-- <link async href="css/style.css" rel="stylesheet"> -->
   <link async href="css/print.css" media="print" rel="stylesheet">
 
   <script>
@@ -74,7 +83,7 @@
         </li>
 
         <li>
-          <img style="width: 100px;" src="views/images/pizzeria.jpg">
+          <img style="width: 100px;" src="views/images/pizzeria_small.jpg">
           <a href="views/pizza.html">Cam's Pizzeria</a>
           <p>Who wants a performant pizza?</p>
         </li>
